--- a/src/style/index.less
+++ b/src/style/index.less
@@ -101,6 +101,14 @@ h2 {
     font-size: 1.65rem;
 }
 
+.text {
+    font-size: 14px;
+}
+
+.item {
+    margin-bottom: 18px;
+}
+
 main {
     display: block;
 }
