--- a/src/style/index.less
+++ b/src/style/index.less
@@ -186,6 +186,10 @@ main {
     line-height: 24px;
 }
 
+.sidebar .sidebar-groups .sidebar-group+.sidebar-group {
+    padding-top: 24px;
+}
+
 .link {
     display: block;
     padding: 10px 16px;
