--- a/src/style/index.less
+++ b/src/style/index.less
@@ -105,6 +105,37 @@ h2 {
     font-size: 14px;
 }
 
+.ml-2 {
+    margin-left: 0.5rem;
+}
+
+.mx-1 {
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
+}
+
+.gap-1 {
+    grid-gap: 0.25rem;
+    gap: 0.25rem;
+}
+
+.items-center {
+    align-items: center;
+}
+
+.flex-wrap {
+    flex-wrap: wrap;
+}
+
+.flex {
+    display: flex;
+}
+
+.my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 .item {
     margin-bottom: 18px;
 }
